--- a/starter-kits/tailwind/source/default/patterns/01-atoms/button/button.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/01-atoms/button/button.wingsuit.yml
@@ -37,6 +37,13 @@ button:
             active: 'bg-transparent text-purple-600 dark:text-white hover:text-purple-800 dark:hover:text-purple-400'
             disabled: 'bg-gray-300 text-gray-400'
   settings:
+    tag_name:
+      type: select
+      label: Tag Name
+      options:
+        div: Div
+        a: A
+        button: Button
     size:
       type: select
       required: true
@@ -101,6 +108,9 @@ button:
       type: boolean
       label: Expanded
       default_value: false
+    extra_classes:
+      type: textfield
+      label: Extra classes
   configuration:
     defaults:
       wrapper_classes: 'btn rounded-[22px] font-display flex items-center inline-flex font-bold focus:outline-yellow-500 focus:outline focus:outline-3 focus:outline-offset-2 focus:outline-yellow-400'
