feat(search-bar)

--- a/starter-kits/tailwind/apps/storybook/patterns/05-pages/web-form/web-form.wingsuit.yml
+++ b/starter-kits/tailwind/apps/storybook/patterns/05-pages/web-form/web-form.wingsuit.yml
@@ -82,6 +82,7 @@ page_webform:
               - id: form_element
                 variant: radios
               - id: form_submit
+                variant: default
           settings:
             width: default
             columns: 1
