--- a/starter-kits/tailwind/source/default/patterns/00-forms/input/input.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/00-forms/input/input.wingsuit.yml
@@ -23,6 +23,10 @@ form_input:
       label: Date
       settings:
         attributes: "type=\"date\""
+    search:
+      label: Search
+      settings:
+        attributes: "type=\"text\" placeholder=\"Search\""
   settings:
     attributes:
       type: attributes
