fix (search-bar) : yet to do :swap hard svgs for pattern icon; remove unused classes in css(type search)

--- a/starter-kits/tailwind/apps/drupal/wingsuit.libraries.yml
+++ b/starter-kits/tailwind/apps/drupal/wingsuit.libraries.yml
@@ -12,7 +12,8 @@ core:
         preprocess: true
       ws-assets://form-label.css:
         preprocess: true
-
+      ws-assets://search-bar.css:
+        preprocess: true
   js:
     ws-assets://vendors/alpine.js:
       preprocess: true
