feat: Add simplified grid and section component

--- a/starter-kits/tailwind/.eslintignore
+++ b/starter-kits/tailwind/.eslintignore
@@ -7,5 +7,5 @@ tools/tests/vrt/backstop_data
 preview.js-generated-config-entry.js
 storybook-init-framework-entry.js
 
-# Ignore yeoman new-component templates
-tools/new-component/templates
+/**/node_modules/*
+.*/
