--- a/starter-kits/tailwind/package.json
+++ b/starter-kits/tailwind/package.json
@@ -28,10 +28,10 @@
     "docs:storybook": "storybook build --docs --config-dir apps/storybook -o ./dist/app-storybook",
     "dev:drupal": "yarn ws dev drupal",
     "build:drupal": "yarn ws build drupal",
-    "lint:js": "eslint --ext .js ./",
+    "lint:js": "eslint --ext .js ./source",
     "lint:css": "stylelint '**/*.css'",
     "lint": "npm run lint:js; npm run lint:css;",
-    "fmt:js": "eslint --fix --ext .js,.vue ./",
+    "fmt:js": "eslint --fix --ext .js,.vue ./source",
     "fmt:css": "npm run lint:css --fix && prettier --loglevel warn --write '**/*.{css}'",
     "fmt": "npm run fmt:js; npm run fmt:css",
     "ci": "npm run lint && npm run build:drupal"
@@ -65,16 +65,16 @@
     "autoprefixer": "^9.7.4",
     "core-js": "^3.29.1",
     "cross-env": "^7.0.3",
-    "eslint": "^8.36.0",
+    "eslint": "^8.37.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^7.2.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-import-resolver-webpack": "^0.13.2",
     "eslint-loader": "^4.0.2",
-    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-vue": "^9.10.0",
     "lodash": "^4.17.20",
     "postcss": "^8",
     "postcss-nested": "^4.2.1",
@@ -90,11 +90,10 @@
     "yo": "^3.1.1"
   },
   "dependencies": {
-    "@parcel/css": "^1.14.0",
-    "@splidejs/splide": "^2.4.21",
-    "@tailwindcss/forms": "^0.4.0",
+    "@splidejs/splide": "^4.1.4",
+    "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.0",
-    "alpinejs": "^3.0.9",
+    "alpinejs": "^3.12.0",
     "svg4everybody": "^2.1.9",
     "tailwind-hamburgers": "^1.3.4",
     "tailwindcss": "^3.2.7"
