--- a/starter-kits/tailwind/source/default/patterns/03-organisms/section/section.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/03-organisms/section/section.wingsuit.yml
@@ -42,49 +42,7 @@ section:
       type: boolean
       label: Display header region
       weight: 30
-    columns_width_1:
-      type: radios
-      label: Column widths
-      default_value: equal
-      required: true
-      weight: 10
-      options:
-        equal: 100%
-    columns_width_2:
-      type: radios
-      label: Column widths
-      default_value: equal
-      required: true
-      weight: 10
-      options:
-        equal: 50%/50%
-        66x33: 66%/33%
-        33x66: 33%/66%
-    columns_width_3:
-      type: radios
-      label: Column widths
-      default_value: equal
-      required: true
-      weight: 10
-      options:
-        equal: 33%/33%/33%
-        25x50x25: 25%/50%/25%
-    columns_width_4:
-      type: radios
-      label: Column widths
-      default_value: equal
-      required: true
-      weight: 10
-      options:
-        equal: 25%/25%/25%/25%
-    columns_width_5:
-      type: radios
-      label: Column widths
-      default_value: equal
-      required: true
-      weight: 10
-      options:
-        equal: 20%/20%/20%/20%
+
   variants:
     1_column:
       label: One Column
@@ -94,53 +52,25 @@ section:
         column_4: ""
         column_5: ""
       settings:
-        columns: 1
         gutter: default
-        columns_width_1: "equal"
-        columns_width_2: ""
-        columns_width_3: ""
-        columns_width_4: ""
-        columns_width_5: ""
+        layout: "equal"
     2_column:
       label: Two Columns
       fields:
         column_3: ""
         column_4: ""
         column_5: ""
-      settings:
-        columns: 2
-        columns_width_1: ""
-        columns_width_3: ""
-        columns_width_4: ""
-        columns_width_5: ""
     3_column:
       label: Three Columns
       fields:
         column_4: ""
         column_5: ""
-      settings:
-        columns: 3
-        columns_width_1: ""
-        columns_width_2: ""
-        columns_width_4: ""
-        columns_width_5: ""
     4_column:
       label: Four Columns
       fields:
         column_5: ""
-      settings:
-        columns: 4
-        columns_width_1: ""
-        columns_width_2: ""
-        columns_width_3: ""
-        columns_width_4: "equal"
-        columns_width_5: ""
     5_column:
       label: Five Columns
-      settings:
-        columns: 5
-        columns_width_1: ""
-        columns_width_2: ""
-        columns_width_3: ""
-        columns_width_4: ""
-        columns_width_5: "equal"
+  configuration:
+    classes:
+      header: 'mb-5 md:mb-10'
