--- a/starter-kits/tailwind/source/default/patterns/02-molecules/menu/menu.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/menu/menu.wingsuit.yml
@@ -78,25 +78,25 @@ menu:
             url: '#'
             below:
               21:
-                title: Eins eins
+                title: 1 1
               22:
-                title: Eins zwei
+                title: 1 2
                 url: '#'
               23:
-                title: Eins drei
+                title: 1 3
                 url: '#'
                 below:
                   111:
-                    title: Zwei eins
+                    title: 2 1
                     url: '#'
                   112:
-                    title: Zwei zwei
+                    title: 2 2
                     url: '#'
                   113:
-                    title: Zwei drei
+                    title: 2 3
                     url: '#'
                   114:
-                    title: Zwei vier
+                    title: 2 4
                     url: '#'
                     below:
                       201:
