fix: Adjust homepage component

--- a/starter-kits/tailwind/source/default/patterns/03-organisms/footer/footer.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/03-organisms/footer/footer.wingsuit.yml
@@ -4,6 +4,8 @@ footer:
   description: The footer pattern with copyright and menu.
   dependencies:
     - container
+    - logo
+    - icon
   fields:
     logo:
       type: pattern
