fix(primary-menu)

--- a/starter-kits/tailwind/source/default/patterns/02-molecules/menu/menu.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/menu/menu.wingsuit.yml
@@ -130,25 +130,20 @@ menu:
       configuration:
         root:
           "wrapper": "lg:flex lg:justify-end lg:space-x-7 lg:items-center"
-          "list_element": "relative"
           "link_wrapper": "flex items-center group gap-2 border-b lg:border-0 px-5 lg:px-0 py-4 lg:py-0 cursor-pointer"
           "link": "font-bold font-display text-base text-black lg:text-white lg:group-hover:text-teal-200 w-full block lg:inline-block"
-          "icon_wrapper": "w-[18px] h-[10px] "
+          "icon_color": "text-white"
         ancestors:
           container:
             wrapper: "submenu lg:border bg-white lg:group-hover-block"
             level:
               first: "lg:absolute -left-[120px]"
               further: "lg:absolute lg:top-0 lg:left-[-165px]"
-          list_element: "relative "
           link:
             wrapper: "flex justify-between items-center bg-white lg:hover:bg-teal-50 block cursor-pointer lg:flex pl-8 pr-4 lg:px-4 py-3 border-b lg:border-0 font-bold tracking-[0.01em]"
             first: "w-full lg:w-[320px]"
             further: "w-full lg:w-[163px]"
-          icon:
-            wrapper: "w-[18px] h-[10px] cursor-pointer"
-            first: "float-right center-origin transition duration-100 ease-in lg:-rotate-90"
-            further: "float-right lg:hidden center-origin transition duration-100 ease-in"
+          icon_color: "text-black"
     footer:
       use: "@molecules/menu/menu-footer.twig"
       label: Footer
