--- a/starter-kits/tailwind/source/default/patterns/02-molecules/menu/menu.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/menu/menu.wingsuit.yml
@@ -132,7 +132,7 @@ menu:
           "wrapper": "lg:flex lg:justify-end lg:space-x-7 lg:items-center"
           "link_wrapper": "flex items-center group gap-2 border-b lg:border-0 px-5 lg:px-0 py-4 lg:py-0 cursor-pointer"
           "link": "font-bold font-display text-base text-black lg:text-white lg:group-hover:text-teal-200 w-full block lg:inline-block"
-          "icon_color": "text-white"
+          "svg_color": "text-white"
         ancestors:
           container:
             wrapper: "submenu lg:border bg-white lg:group-hover-block"
@@ -143,7 +143,7 @@ menu:
             wrapper: "flex justify-between items-center bg-white lg:hover:bg-teal-50 block cursor-pointer lg:flex pl-8 pr-4 lg:px-4 py-3 border-b lg:border-0 font-bold tracking-[0.01em]"
             first: "w-full lg:w-[320px]"
             further: "w-full lg:w-[163px]"
-          icon_color: "text-black"
+          svg_color: "text-black"
     footer:
       use: "@molecules/menu/menu-footer.twig"
       label: Footer
@@ -202,9 +202,11 @@ menu:
                 title: Imprint
                 url: '#'
       configuration:
-        "parent_list_classes": ""
-        "parent_list_item_classes": ""
-        "parent_link_classes": "font-bold font-display dark:text-white text-lg font-sans"
-        "child_list_classes": ""
-        "child_list_item_classes": ""
-        "child_link_classes": "dark:text-white text-base font-serif hover:underline"
+        root:
+          "list_classes": ""
+          "list_item_classes": ""
+          "link_classes": "font-bold font-display dark:text-white text-lg font-sans"
+        ancestors:
+          "list_classes": ""
+          "list_item_classes": ""
+          "link_classes": "dark:text-white text-base font-serif hover:underline"
