--- a/lerna.json
+++ b/lerna.json
@@ -8,6 +8,7 @@
     "examples/*",
     "starter-kits/*"
   ],
+  "useWorkspaces": true,
   "version": "2.0.0-alpha.0",
   "registry": "https://registry.npmjs.org",
   "npmClient": "yarn"
