--- a/package.json
+++ b/package.json
@@ -121,9 +121,8 @@
     "jest-matcher-utils": "^25.1.0",
     "jest-raw-loader": "^1.0.1",
     "jest-serializer-html": "^7.0.0",
-    "jest-vue-preprocessor": "^1.5.0",
     "jest-watch-typeahead": "^0.4.0",
-    "lerna": "^3.20.2",
+    "lerna": "^6.6.1",
     "node-cleanup": "^2.1.2",
     "p-limit": "^2.3.0",
     "prettier": "^2.0.2",
@@ -138,6 +137,7 @@
     "wait-on": "^4.0.0"
   },
   "dependencies": {
+    "@nrwl/nx-linux-x64-gnu": "^15.9.2",
     "window-size": "^1.1.1"
   }
 }
