--- a/starter-kits/tailwind/package.json
+++ b/starter-kits/tailwind/package.json
@@ -43,7 +43,7 @@
     "@storybook/addon-essentials": "^7.0.0-beta.31",
     "@storybook/addon-links": "^7.0.0-beta.31",
     "@storybook/addon-measure": "^1.3.1",
-    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/addon-postcss": "^3.0.0-alpha.1",
     "@storybook/addon-viewport": "^7.0.0-beta.31",
     "@storybook/addons": "^7.0.0-beta.31",
     "@storybook/builder-webpack5": "^7.0.0-beta.31",
