--- a/packages/pattern/package.json
+++ b/packages/pattern/package.json
@@ -34,7 +34,7 @@
   },
   "dependencies": {
     "escape-html": "^1.0.3",
-    "faker": "^4.1.0",
+    "@faker-js/faker": "^7.6.0",
     "html-attribute-parser": "^1.0.0",
     "reflect-metadata": "^0.1.13"
 
