--- a/presets/pages/package.json
+++ b/presets/pages/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/preset-pages",
-  "version": "2.0.0-alpha.0",
+  "version": "2.0.0-alpha.1",
   "description": "Wingsuit Pages.",
   "repository": {
     "type": "git",
@@ -34,15 +34,15 @@
   },
   "gitHead": "c8f79243b1d0a1dace0bf3b8edcd45f23271befc",
   "dependencies": {
-    "@wingsuit-designsystem/core": "2.0.0-alpha.0",
-    "@wingsuit-designsystem/pattern": "2.0.0-alpha.0",
-    "@wingsuit-designsystem/pattern-react": "2.0.0-alpha.0",
+    "@wingsuit-designsystem/core": "2.0.0-alpha.1",
+    "@wingsuit-designsystem/pattern": "2.0.0-alpha.1",
+    "@wingsuit-designsystem/pattern-react": "2.0.0-alpha.1",
     "browser-sync": "^2.26.14",
     "browser-sync-webpack-plugin": "^2.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "static-site-generator-webpack-plugin": "^3.4.2",
-    "yeoman-generator": "^5.3.0",
-    "webpack": "^5.56.1"
+    "webpack": "^5.56.1",
+    "yeoman-generator": "^5.3.0"
   }
 }
