--- a/docs/package.json
+++ b/docs/package.json
@@ -39,15 +39,15 @@
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
-    "@storybook/addon-links": "^7.0.0-beta.31",
+    "@storybook/addon-links": "^7.0.2",
     "@storybook/addon-measure": "^1.3.1",
     "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/addon-viewport": "^7.0.0-beta.31",
-    "@storybook/addons": "^7.0.0-beta.31",
-    "@storybook/builder-webpack5": "^7.0.0-beta.31",
+    "@storybook/addon-viewport": "^7.0.2",
+    "@storybook/addons": "^7.0.2",
+    "@storybook/builder-webpack5": "^7.0.2",
     "@storybook/linter-config": "^2.5.0",
     "@storybook/manager-webpack5": "^7.0.0-alpha.10",
-    "@storybook/react": "^7.0.0-beta.31",
+    "@storybook/react": "^7.0.2",
     "@storybook/storybook-deployer": "^2.8.7",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
