--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -31,16 +31,16 @@
   },
   "homepage": "https://github.com/wingsuit-designsystem/wingsuit/tools#readme",
   "dependencies": {
-    "@storybook/addon-controls": "^7.0.0-beta.31",
-    "@storybook/addon-docs": "^7.0.0-beta.31",
-    "@storybook/builder-webpack5": "^7.0.0-beta.31",
-    "@storybook/client-api": "^7.0.0-beta.31",
-    "@storybook/components": "^7.0.0-beta.31",
-    "@storybook/csf-tools": "^7.0.0-beta.31",
+    "@storybook/addon-controls": "^7.0.2",
+    "@storybook/addon-docs": "^7.0.2",
+    "@storybook/builder-webpack5": "^7.0.2",
+    "@storybook/client-api": "^7.0.2",
+    "@storybook/components": "^7.0.2",
+    "@storybook/csf-tools": "^7.0.2",
     "@storybook/manager-webpack5": "^7.0.0-alpha.10",
     "@storybook/preset-typescript": "^3.0.0",
-    "@storybook/react": "^7.0.0-beta.31",
-    "@storybook/theming": "^7.0.0-beta.31",
+    "@storybook/react": "^7.0.2",
+    "@storybook/theming": "^7.0.2",
     "@types/react": "^16.9.14",
     "@types/react-dom": "^16.9.14",
     "@wingsuit-designsystem/core": "2.0.0-alpha.1",
