--- a/starter-kits/tailwind/package.json
+++ b/starter-kits/tailwind/package.json
@@ -39,18 +39,19 @@
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
-    "@storybook/addon-docs": "^7.0.0-beta.31",
-    "@storybook/addon-essentials": "^7.0.0-beta.31",
-    "@storybook/addon-links": "^7.0.0-beta.31",
-    "@storybook/addon-measure": "^1.3.1",
+    "@storybook/addon-docs": "^7.0.2",
+    "@storybook/addon-essentials": "^7.0.2",
+    "@storybook/addon-links": "^7.0.2",
+    "@storybook/addon-measure": "^7.0.2",
     "@storybook/addon-postcss": "^3.0.0-alpha.1",
-    "@storybook/addon-viewport": "^7.0.0-beta.31",
-    "@storybook/addons": "^7.0.0-beta.31",
-    "@storybook/builder-webpack5": "^7.0.0-beta.31",
-    "@storybook/linter-config": "^2.5.0",
+    "@storybook/addon-viewport": "^7.0.2",
+    "@storybook/addons": "^7.0.2",
+    "@storybook/builder-webpack5": "^7.0.2",
+    "@storybook/linter-config": "^3.1.2",
     "@storybook/manager-webpack5": "^7.0.0-alpha.10",
-    "@storybook/react": "^7.0.0-beta.31",
+    "@storybook/react": "^7.0.2",
     "@storybook/react-webpack5": "^7.0.0-alpha.0",
+    "storybook": "^7.0.2",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@wingsuit-designsystem/cli": "2.0.0-alpha.1",
@@ -58,6 +59,7 @@
     "@wingsuit-designsystem/pattern-react": "2.0.0-alpha.1",
     "@wingsuit-designsystem/preset-icon": "2.0.0-alpha.1",
     "@wingsuit-designsystem/preset-icon-spritemap": "2.0.0-alpha.1",
+    "@wingsuit-designsystem/preset-imagemin": "2.0.0-alpha.1",
     "@wingsuit-designsystem/preset-placeholder": "2.0.0-alpha.1",
     "@wingsuit-designsystem/preset-tailwind2": "2.0.0-alpha.1",
     "@wingsuit-designsystem/preset-twing": "2.0.0-alpha.1",
@@ -83,7 +85,7 @@
     "react-dom": "^16.13.1",
     "regenerator-runtime": "^0.13.3",
     "require-context": "^1.1.0",
-    "storybook-addon-themes": "^6.0.1",
+    "storybook-addon-themes": "^6.1.0",
     "storycap": "^3.0.4",
     "stylelint-scss": "^3.17.2",
     "webpack": "^5.56.1",
