--- a/starter-kits/vanilla-tailwind/package.json
+++ b/starter-kits/vanilla-tailwind/package.json
@@ -37,17 +37,17 @@
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
-    "@storybook/addon-docs": "^7.0.0-beta.31",
-    "@storybook/addon-essentials": "^7.0.0-beta.31",
-    "@storybook/addon-links": "^7.0.0-beta.31",
-    "@storybook/addon-measure": "^1.3.1",
+    "@storybook/addon-docs": "^7.0.2",
+    "@storybook/addon-essentials": "^7.0.2",
+    "@storybook/addon-links": "^7.0.2",
+    "@storybook/addon-measure": "^7.0.2",
     "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/addon-viewport": "^7.0.0-beta.31",
-    "@storybook/addons": "^7.0.0-beta.31",
-    "@storybook/builder-webpack5": "^7.0.0-beta.31",
+    "@storybook/addon-viewport": "^7.0.2",
+    "@storybook/addons": "^7.0.2",
+    "@storybook/builder-webpack5": "^7.0.2",
     "@storybook/linter-config": "^2.5.0",
     "@storybook/manager-webpack5": "^7.0.0-alpha.10",
-    "@storybook/react": "^7.0.0-beta.31",
+    "@storybook/react": "^7.0.2",
     "@storybook/react-webpack5": "^7.0.0-alpha.0",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
@@ -81,7 +81,7 @@
     "react-dom": "^16.13.1",
     "regenerator-runtime": "^0.13.3",
     "require-context": "^1.1.0",
-    "storybook": "^7.0.0-beta.31",
+    "storybook": "^7.0.2",
     "storybook-addon-themes": "^6.0.1",
     "storycap": "^3.0.4",
     "stylelint-scss": "^3.17.2",
