--- a/starter-kits/tailwind/package.json
+++ b/starter-kits/tailwind/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
+    "@esbuild/linux-x64": "^0.17.15",
     "@storybook/addon-docs": "^7.0.2",
     "@storybook/addon-essentials": "^7.0.2",
     "@storybook/addon-links": "^7.0.2",
@@ -51,7 +52,6 @@
     "@storybook/manager-webpack5": "^7.0.0-alpha.10",
     "@storybook/react": "^7.0.2",
     "@storybook/react-webpack5": "^7.0.0-alpha.0",
-    "storybook": "^7.0.2",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@wingsuit-designsystem/cli": "2.0.0-alpha.1",
@@ -73,7 +73,6 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-import-resolver-webpack": "^0.13.2",
-    "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-prettier": "^4.2.1",
@@ -85,13 +84,14 @@
     "react-dom": "^16.13.1",
     "regenerator-runtime": "^0.13.3",
     "require-context": "^1.1.0",
+    "storybook": "^7.0.2",
     "storybook-addon-themes": "^6.1.0",
-    "storycap": "^3.0.4",
     "stylelint-scss": "^3.17.2",
     "webpack": "^5.56.1",
     "yo": "^3.1.1"
   },
   "dependencies": {
+    "@drupal/once": "^1.0.1",
     "@splidejs/splide": "^4.1.4",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.0",
