--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -25,6 +25,13 @@
     "url": "https://github.com/wingsuit-designsystem/wingsuit/issues"
   },
   "homepage": "https://github.com/wingsuit-designsystem/wingsuit/tools#readme",
+  "scripts": {
+    "prepare": "node ../../scripts/prepare.js"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "gitHead": "c8f79243b1d0a1dace0bf3b8edcd45f23271befc",
   "dependencies": {
     "@types/jest": "^27.0.2",
     "@types/node": "^16.10.2",
@@ -39,11 +46,9 @@
     "copy-webpack-plugin": "^9.0.1",
     "crypto-browserify": "^3.12.0",
     "css-loader": "^6.7.1",
-    "css-minimizer-webpack-plugin": "^3.4.1",
-    "drupal-attribute": "1.0.2",
+    "eslint-webpack-plugin": "^4.0.0",
     "fs-extra": "^10.0.0",
     "glob": "^8.1.0",
-    "image-webpack-loader": "^8.0.1",
     "jest": "^27.2.4",
     "js-yaml-loader": "^1.2.2",
     "jsondiffpatch": "^0.4.1",
@@ -56,8 +61,8 @@
     "node-polyfill-webpack-plugin": "^1.1.4",
     "path": "^0.12.7",
     "postcss": "^8.3.9",
-    "postcss-loader": "^7.0.2",
-    "postcss-nested": "^6.0.0",
+    "postcss-loader": "^7.2.4",
+    "postcss-nested": "^6.0.1",
     "postcss-preset-env": "^7.8.3",
     "postcss-replace": "^2.0.0",
     "prettier": "^2.3.0",
@@ -67,24 +72,17 @@
     "stream-browserify": "^3.0.0",
     "style-loader": "^3.3.0",
     "stylelint": "^13.13.1",
+    "@babel/generator": "^7.21.4",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-webpack-plugin": "^3.0.1",
     "terser-webpack-plugin": "^5.2.4",
     "webpack": "^5.56.1",
-    "webpack-cli": "^4.8.0",
+    "webpack-cli": "^5.0.1",
     "webpack-merge": "^5.8.0",
     "yaml": "^1.10.2",
-    "yargs": "^17.2.1"
-  },
-  "scripts": {
-    "prepare": "node ../../scripts/prepare.js"
-  },
-  "publishConfig": {
-    "access": "public"
-  },
-  "gitHead": "c8f79243b1d0a1dace0bf3b8edcd45f23271befc",
-  "devDependencies": {
-    "@emotion/babel-plugin": "^11.10.0",
-    "node-polyfill-webpack-plugin": "^1.1.4"
+    "yargs": "^17.2.1",
+    "css-minimizer-webpack-plugin": "^5.0.0",
+    "@emotion/babel-plugin": "^11.10.6",
+    "eslint": "^8.37.0"
   }
 }
