--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -37,8 +37,6 @@
     "@storybook/client-api": "^7.0.2",
     "@storybook/components": "^7.0.2",
     "@storybook/csf-tools": "^7.0.2",
-    "@storybook/manager-webpack5": "^7.0.0-alpha.10",
-    "@storybook/preset-typescript": "^3.0.0",
     "@storybook/react": "^7.0.2",
     "@storybook/theming": "^7.0.2",
     "@types/react": "^16.9.14",
@@ -51,7 +49,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-syntax-highlighter": "^15.5.0",
-    "webpack": "5"
+    "webpack": "^5.78.0"
   },
   "scripts": {
     "prepare": "node ../../scripts/prepare.js"
