--- a/lerna.json
+++ b/lerna.json
@@ -11,5 +11,6 @@
   "useWorkspaces": true,
   "version": "2.0.0-alpha.1",
   "registry": "https://registry.npmjs.org",
+  "useNx": true,
   "npmClient": "yarn"
 }
