--- a/package.json
+++ b/package.json
@@ -134,10 +134,9 @@
     "trash": "^6.1.1",
     "ts-node": "^8.9.1",
     "typescript": "^4.5.4",
-    "wait-on": "^4.0.0"
-  },
-  "dependencies": {
-    "@nrwl/nx-linux-x64-gnu": "^15.9.2",
-    "window-size": "^1.1.1"
+    "wait-on": "^4.0.0",
+    "window-size": "^1.1.1",
+    "nx": "15.3.0",
+    "@nrwl/nx-linux-x64-gnu": "^15.9.2"
   }
 }
