--- a/starter-kits/tailwind/source/default/patterns/02-molecules/rich-snippet/rich-snippet.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/rich-snippet/rich-snippet.wingsuit.yml
@@ -21,6 +21,7 @@ rich_snippet:
           token: lorem.sentence
           options:
             length: 1
+            chars: 10
     text:
       type: text
       label: Text
