--- a/starter-kits/tailwind/source/default/patterns/02-molecules/hero/hero.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/hero/hero.wingsuit.yml
@@ -13,10 +13,10 @@ hero:
       type: pattern
       label: Image
       preview:
-        id: image
+        id: placeholder
         variant: image
         settings:
-          url: file_url('ws-assets://images/hero.png')
+          src: images/hero.png
   configuration:
     defaults:
       cell_left_classes: 'flex flex-col relative'
