feat: Add initial save behavior for changed files

--- a/starter-kits/tailwind/apps/storybook/patterns/05-pages/homepage/homepage.wingsuit.yml
+++ b/starter-kits/tailwind/apps/storybook/patterns/05-pages/homepage/homepage.wingsuit.yml
@@ -42,6 +42,8 @@ page_homepage:
               - id: banner
         - id: section
           variant: 1_column
+          settings:
+            width: small
           fields:
             column_1:
               - id: accordion_item
@@ -64,6 +66,8 @@ page_homepage:
                 variant: default
         - id: section
           variant: 1_column
+          settings:
+            width: small
           fields:
             column_1:
               - id: rich_text
