--- a/starter-kits/tailwind/source/default/patterns/01-atoms/alert/alert.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/01-atoms/alert/alert.wingsuit.yml
@@ -7,7 +7,7 @@ alert:
   fields:
     title_ids:
       type: object
-      label: Title Ids
+      label: Title Ids23
       description: A list of unique ids keyed by message type.
       preview:
         status: 'status'
