--- a/starter-kits/tailwind/source/default/patterns/01-atoms/button/button.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/01-atoms/button/button.wingsuit.yml
@@ -15,25 +15,25 @@ button:
     default:
       label: Default
       configuration:
-          wrapper_classes:
+          classes:
             active: 'bg-purple-600 dark:bg-white hover:bg-purple-800 dark:hover:bg-purple-100 text-white dark:text-purple-700'
             disabled: 'bg-gray-300 text-gray-400'
     outline:
       label: Outline
       configuration:
-        wrapper_classes:
+        classes:
           active: 'border-2 border-purple-600 hover:border-purple-800 bg-white text-purple-600 hover:text-purple-800'
           disabled: 'border-2 border-gray-400 bg-white text-gray-400'
     link:
       label: Link
       configuration:
-        wrapper_classes:
+        classes:
           active: 'bg-transparent text-purple-600 dark:text-white hover:text-purple-800 dark:hover:text-purple-400'
           disabled: 'text-gray-400'
     icon:
       label: Icon
       configuration:
-          wrapper_classes:
+          classes:
             active: 'bg-transparent text-purple-600 dark:text-white hover:text-purple-800 dark:hover:text-purple-400'
             disabled: 'bg-gray-300 text-gray-400'
   settings:
@@ -112,5 +112,5 @@ button:
       type: textfield
       label: Extra classes
   configuration:
-    defaults:
-      wrapper_classes: 'btn rounded-[22px] font-display flex items-center inline-flex font-bold focus:outline-yellow-500 focus:outline focus:outline-3 focus:outline-offset-2 focus:outline-yellow-400'
+    classes:
+      wrapper: 'btn rounded-[22px] font-display flex items-center inline-flex font-bold focus:outline-yellow-500 focus:outline focus:outline-3 focus:outline-offset-2 focus:outline-yellow-400'
