feat: Add drupal and storybook presets

--- a/presets/compression/package.json
+++ b/presets/compression/package.json
@@ -6,7 +6,7 @@
     "type": "git",
     "url": "git+https://github.com/wingsuit-designsystem/wingsuit.git"
   },
-  "main": "./dist/index.js",
+  "main": "./dist/preset.js",
   "files": [
     "bin/**/*",
     "dist/**/*",
@@ -29,7 +29,7 @@
   "dependencies": {
     "@gfx/zopfli": "^1.0.15",
     "@wingsuit-designsystem/core": "2.0.0-alpha.1",
-    "compression-webpack-plugin": "^6.1.1",
+    "compression-webpack-plugin": "^10.0.0",
     "zlib": "^1.0.5"
   },
   "scripts": {
