--- a/starter-kits/vanilla-scss/package.json
+++ b/starter-kits/vanilla-scss/package.json
@@ -57,6 +57,7 @@
     "@wingsuit-designsystem/preset-placeholder": "2.0.0-alpha.1",
     "@wingsuit-designsystem/preset-scss": "2.0.0-alpha.1",
     "@wingsuit-designsystem/preset-twing": "2.0.0-alpha.1",
+    "@wingsuit-designsystem/preset-storybook": "2.0.0-alpha.1",
     "@wingsuit-designsystem/storybook": "2.0.0-alpha.1",
     "autoprefixer": "^9.7.4",
     "core-js": "^3.4.1",
