--- a/docs/package.json
+++ b/docs/package.json
@@ -40,11 +40,9 @@
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
     "@storybook/addon-links": "^7.0.2",
-    "@storybook/addon-measure": "^1.3.1",
     "@storybook/addon-postcss": "^2.0.0",
     "@storybook/addon-viewport": "^7.0.2",
     "@storybook/addons": "^7.0.2",
-    "@storybook/builder-webpack5": "^7.0.2",
     "@storybook/linter-config": "^2.5.0",
     "@storybook/manager-webpack5": "^7.0.0-alpha.10",
     "@storybook/react": "^7.0.2",
@@ -68,7 +66,6 @@
     "eslint-plugin-jest": "^23.7.0",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-vue": "^6.0.1",
-    "lodash": "^4.17.20",
     "postcss": "^8",
     "postcss-nested": "^4.2.1",
     "prettier": "^1.19.1",
@@ -76,11 +73,8 @@
     "react-dom": "^16.13.1",
     "regenerator-runtime": "^0.13.3",
     "require-context": "^1.1.0",
-    "storybook-addon-themes": "^6.0.1",
-    "storycap": "^3.0.4",
-    "stylelint-scss": "^3.17.2",
-    "webpack": "^5.56.1",
-    "yo": "^3.1.1"
+    "storybook-addon-themes": "^6.1.0",
+    "webpack": "^5.56.1"
   },
   "dependencies": {
     "@ryangjchandler/spruce": "^2.6.3",
