--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -38,6 +38,10 @@
     "@storybook/components": "^7.0.2",
     "@storybook/csf-tools": "^7.0.2",
     "@storybook/react": "^7.0.2",
+    "@babel/generator": "^7.21.2",
+    "yaml": "^2.2.1",
+    "babylon": "^6.18.0",
+    "babel-traverse": "^6.26.0",
     "@storybook/theming": "^7.0.2",
     "@types/react": "^16.9.14",
     "@types/react-dom": "^16.9.14",
