--- a/presets/drupal/package.json
+++ b/presets/drupal/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@wingsuit-designsystem/preset-pages",
+  "name": "@wingsuit-designsystem/preset-drupal",
   "version": "2.0.0-alpha.1",
-  "description": "Wingsuit Pages.",
+  "description": "Wingsuit Drupal preset.",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/wingsuit-designsystem/wingsuit.git"
@@ -16,9 +16,7 @@
     "ts3.5/**/*"
   ],
   "keywords": [
-    "Storybook",
-    "Atomic Design",
-    "Tailwind"
+    "Storybook"
   ],
   "author": "Christian Wiedemann",
   "license": "MIT",
@@ -32,17 +30,13 @@
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "c8f79243b1d0a1dace0bf3b8edcd45f23271befc",
+  "gitHead": "b7c8ec4097ae5cf658338c2a6c9de411793c9a58",
   "dependencies": {
+    "@wingsuit-designsystem/storybook": "2.0.0-alpha.1",
     "@wingsuit-designsystem/core": "2.0.0-alpha.1",
-    "@wingsuit-designsystem/pattern": "2.0.0-alpha.1",
-    "@wingsuit-designsystem/pattern-react": "2.0.0-alpha.1",
-    "browser-sync": "^2.26.14",
-    "browser-sync-webpack-plugin": "^2.3.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "static-site-generator-webpack-plugin": "^3.4.2",
+    "@wingsuit-designsystem/preset-pattern": "2.0.0-alpha.1",
+    "path": "^0.12.7",
     "webpack": "^5.56.1",
-    "yeoman-generator": "^5.3.0"
+    "glob": "^8.1.0"
   }
 }
