--- a/presets/pattern/package.json
+++ b/presets/pattern/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@wingsuit-designsystem/preset-tailwind2",
+  "name": "@wingsuit-designsystem/preset-pattern",
   "version": "2.0.0-alpha.1",
-  "description": "Wingsuit TailwindCSS 2 preset.",
+  "description": "Wingsuit Twing preset.",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/wingsuit-designsystem/wingsuit.git"
   },
-  "main": "./dist/index.js",
+  "main": "./dist/preset.js",
   "files": [
     "bin/**/*",
     "dist/**/*",
@@ -26,17 +26,18 @@
     "url": "https://github.com/wingsuit-designsystem/wingsuit/issues"
   },
   "homepage": "https://github.com/wingsuit-designsystem/wingsuit/tools#readme",
-  "dependencies": {
-    "@wingsuit-designsystem/core": "2.0.0-alpha.1",
-    "fs-extra": "^9.0.0",
-    "json-diff": "^0.7.1",
-    "tailwindcss": "^3.2.7"
-  },
   "scripts": {
     "prepare": "node ../../scripts/prepare.js"
   },
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "c8f79243b1d0a1dace0bf3b8edcd45f23271befc"
+  "gitHead": "b7c8ec4097ae5cf658338c2a6c9de411793c9a58",
+  "dependencies": {
+    "@wingsuit-designsystem/core": "2.0.0-alpha.1",
+    "@wingsuit-designsystem/pattern": "2.0.0-alpha.1",
+    "glob": "^8.1.0",
+    "yaml": "^1.10.2",
+    "loader-utils": "^2.0.0"
+  }
 }
