--- a/presets/tailwind/package.json
+++ b/presets/tailwind/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@wingsuit-designsystem/preset-tailwind",
   "version": "2.0.0-alpha.1",
-  "description": "Wingsuit TailwindCSS preset.",
+  "description": "Wingsuit TailwindCSS 2 preset.",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/wingsuit-designsystem/wingsuit.git"
@@ -30,7 +30,7 @@
     "@wingsuit-designsystem/core": "2.0.0-alpha.1",
     "fs-extra": "^9.0.0",
     "json-diff": "^0.7.1",
-    "tailwindcss": "^1.4.6"
+    "tailwindcss": "^3.2.7"
   },
   "scripts": {
     "prepare": "node ../../scripts/prepare.js"
